tests/extended/invalid/int_overflow.cl
class Main {
  a : Int64 <- 2147483648;
  main() : Int64 {
    a;
  }
}
